[package]
name = "crabby_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = "0.7"
base64 = "0.22.1"
byte-pool = "0.2.4"
chrono = "0.4.41"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
lazy_static = "1.5.0"
notify = "8.2.0"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "0.9.11"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
