[package]
name = "crabby_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.7"
base64 = "0.22.1"
byte-pool = "0.2.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
jsonwebtoken = { version = "10.3.0", features = ["default"] }
lazy_static = "1.5.0"
notify = "8.2.0"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "0.9.11"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rand = "0.8"
governor = "0.6"
nonzero_ext = "0.3"
